--- a/src/app/pages/auth/side-login/side-login.component.html
+++ b/src/app/pages/auth/side-login/side-login.component.html
@@ -36,13 +36,13 @@
 
           <form class="m-t-30">
             <mat-label class="f-s-14 f-w-600 m-b-12 d-block">Username</mat-label>
-            <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput />
+            <mat-form-field appearance="outline" class="w-100" color="primary" >
+              <input matInput value="admin@test.com" />
             </mat-form-field>
             <!-- password -->
             <mat-label class="f-s-14 f-w-600 m-b-12 d-block">Password</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="password" />
+              <input matInput type="password" value="password" />
             </mat-form-field>
 
             <div class="d-flex align-items-center m-b-12">
@@ -53,7 +53,7 @@
             <a (click)="submit()"  mat-flat-button color="primary" class="w-100">
               Sign In
             </a>
-            <!-- input -->
+            
           </form>
           <span class="d-block f-w-500 text-center m-t-24">New to NgDemo?
             <a [routerLink]="['/auth/register']" class="text-decoration-none text-primary f-w-500 f-s-14">
