--- a/src/app/pages/auth/side-register/side-register.component.html
+++ b/src/app/pages/auth/side-register/side-register.component.html
@@ -35,22 +35,22 @@
           <form class="m-t-30">
             <mat-label class="f-s-14 f-w-600 m-b-12 d-block">Name</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput />
+              <input matInput value="admin" />
             </mat-form-field>
             <mat-label class="f-s-14 f-w-600 m-b-12 d-block">Email Adddress</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="email" />
+              <input matInput type="email" value="admin@test.com" />
             </mat-form-field>
             <!-- password -->
             <mat-label class="f-s-14 f-w-600 m-b-12 d-block">Password</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="password" />
+              <input matInput type="password" value="password" />
             </mat-form-field>
 
             <a [routerLink]="['/']" mat-flat-button color="primary" class="w-100">
               Sign Up
             </a>
-            <!-- input -->
+            
           </form>
           <span class="d-block f-w-500 text-center m-t-24">Already have an Account?
 
