--- a/src/app/pages/order/order-form.component.html
+++ b/src/app/pages/order/order-form.component.html
@@ -2,145 +2,127 @@
   <mat-card-header>
     <mat-card-title class="m-b-0">{{pageTitle()}}</mat-card-title>
   </mat-card-header>
-  <!-- <mat-toolbar style="background-color: #FFF">
-    <mat-toolbar-row>
-      <span class="view-card-title"> {{pageTitle}}</span>
-      <span class="title-spacer"></span>
-      <mat-card-actions>
-        <button mat-mini-fab class="primary" style="margin-right:10px; background-color:darkgray" type="submit"
-          [disabled]='!orderForm.valid'>
-          <mat-icon>save</mat-icon>
-        </button>
-        <button mat-mini-fab class="" style="margin-right:10px; " [routerLink]="['/order']">
-          <mat-icon>cancel</mat-icon>
-        </button>
-        <button mat-mini-fab class="accent" style="margin-right:10px; background-color:#e07c9e"
-          (click)="addProduct($event)">
-          <mat-icon>add</mat-icon>
-        </button>
-      </mat-card-actions>
-    </mat-toolbar-row>
-  </mat-toolbar> -->
 
 
+  <mat-card-content class="b-t-1">
 
-    <mat-card-content style="margin: 5 0 5 0px;">
-      <form novalidate (ngSubmit)="saveOrder()" [formGroup]="orderForm">
+    <ol class="stepper" color="primary">
+      <li [class]="deliveryStatus.packing">Packing</li>
+      <li [class]="deliveryStatus.shipping">Shipping</li>
+      <li [class]="deliveryStatus.customs">Customs Clearance</li>
+      <li [class]="deliveryStatus.delivered">Delivered</li>
+    </ol>
 
-      <div class="form-card">
-        <mat-grid-list cols="12" rowHeight="80px">
-          <!-- <mat-grid-tile [colspan]="fieldColspan">
-            <mat-form-field class="form-field" appearance="outline">
-              <mat-select placeholder="Select Customer" #customerIdId formControlName="customerId"
-                [(value)]="order.customerId">
-                <mat-option *ngFor="let customer of customers" [value]="customer.id">
-                  {{customer.firstname}} {{customer.lastname}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </mat-grid-tile> -->
-          <mat-grid-tile [colspan]="fieldColspan">
-            <mat-form-field class="form-field" appearance="outline">
-              <input matInput placeholder="Reference No" id="referenceId" type="text"
-                placeholder="Reference No. (required)" formControlName="reference" />
-              <mat-error *ngIf="displayMessage.reference">
-                <!-- {{displayMessage.reference}} -->
-              </mat-error>
-            </mat-form-field>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="fieldColspan">
-            <mat-form-field class="form-field" appearance="outline">
-              <input matInput placeholder="Amount" id="amountId" type="number" placeholder="Price (required)"
-                formControlName="amount" />
-              <mat-error *ngIf="displayMessage.amount">
-                <!-- {{displayMessage.amount}} -->
-              </mat-error>
-            </mat-form-field>
-          </mat-grid-tile>
-          <!-- <mat-grid-tile [colspan]="fieldColspan">
-            <mat-form-field class="form-field" appearance="outline">
-              <input matInput placeholder="Quantity" id="quantityId" type="number" placeholder="Quantity (required)"
-                formControlName="quantity" />
-              <mat-error *ngIf="displayMessage.quantity">
-              </mat-error>
-            </mat-form-field>
-          </mat-grid-tile> -->
-          <mat-grid-tile [colspan]="fieldColspan">
-            <mat-form-field class="form-field" appearance="outline">
-              <input matInput [matDatepicker]="orderpickerId" placeholder="Order date"   formControlName="orderDate"  > 
-              <!-- [value]="order.orderDate"> -->
-              <mat-datepicker-toggle matSuffix [for]="orderpickerId"></mat-datepicker-toggle>
-              <mat-datepicker #orderpickerId></mat-datepicker>
-            </mat-form-field>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="fieldColspan">
-            <mat-form-field class="form-field" appearance="outline">
-              <input matInput [matDatepicker]="shippedDateId" placeholder="Shipped date"  formControlName="shippedDate"  > 
-              <!-- [value]="order.shippedDate"> -->
-              <mat-datepicker-toggle matSuffix [for]="shippedDateId"></mat-datepicker-toggle>
-              <mat-datepicker #shippedDateId></mat-datepicker>
-            </mat-form-field>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="fieldColspan">
+    <form novalidate (ngSubmit)="saveOrder()" [formGroup]="orderForm">
 
-            <mat-form-field class="form-field" appearance="outline">
-              <input matInput placeholder="Address" id="addressId" type="text" formControlName="address"  />
-              <mat-error class="help-block" *ngIf="displayMessage.address">
-                <!-- {{displayMessage.address}} -->
-              </mat-error>
-            </mat-form-field>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="fieldColspan">
-            <mat-form-field class="form-field" appearance="outline">
-              <input matInput placeholder="City" id="cityId" type="text" formControlName="city" />
-              <mat-error class="help-block" *ngIf="displayMessage.city">
-                <!-- {{displayMessage.city}} -->
-              </mat-error>
-            </mat-form-field>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="fieldColspan">
-            <mat-form-field class="form-field" appearance="outline">
-              <input matInput placeholder="Country" id="countryId" type="text" formControlName="country" />
-              <mat-error class="help-block" *ngIf="displayMessage.country">
-                <!-- {{displayMessage.country}} -->
-              </mat-error>
-            </mat-form-field>
-          </mat-grid-tile>
-          <mat-grid-tile [colspan]="fieldColspan">
-            <mat-form-field class="form-field" appearance="outline">
-              <input matInput placeholder="Zipcode" id="zipcodeId" type="text" formControlName="zipcode" />
-              <mat-error class="help-block" *ngIf="displayMessage.zipcode">
-                <!-- {{displayMessage.zipcode}} -->
-              </mat-error>
-            </mat-form-field>
-          </mat-grid-tile>
-        </mat-grid-list>
+      <div class="row">
+        <!-- <mat-grid-list cols="12"> -->
+        <div class="col-lg-6">
+          <mat-label class="f-w-600 m-b-8 d-block">Reference No.</mat-label>
+          <mat-form-field appearance="outline" class="w-100" color="primary">
+            <input matInput [disabled]="true" placeholder="Reference No" id="referenceId" type="text"
+              placeholder="Reference No. " formControlName="reference" />
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-label class="f-w-600 m-b-8 d-block">Customer</mat-label> <mat-form-field appearance="outline"
+            class="w-100" color="primary">
+            <input matInput [disabled]="true" placeholder="Reference No" id="customer" type="text"
+              placeholder="Customer" formControlName="customer" />
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-label class="f-w-600 m-b-8 d-block">Total Price</mat-label> <mat-form-field appearance="outline"
+            class="w-100" color="primary">
+            <input matInput placeholder="Amount" id="amountId" type="number" placeholder="Price "
+              formControlName="amount" />
+            <mat-error *ngIf="displayMessage.amount">
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-label class="f-w-600 m-b-8 d-block">Billing Date</mat-label> <mat-form-field appearance="outline"
+            class="w-100" color="primary">
+            <input matInput [matDatepicker]="orderpickerId" placeholder="Order date" formControlName="orderDate">
+
+            <mat-datepicker-toggle matSuffix [for]="orderpickerId"></mat-datepicker-toggle>
+            <mat-datepicker #orderpickerId></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-label class="f-w-600 m-b-8 d-block">Shipping Date</mat-label> <mat-form-field appearance="outline"
+            class="w-100" color="primary">
+            <input matInput [matDatepicker]="shippedDateId" placeholder="Shipped date" formControlName="shippedDate">
+
+            <mat-datepicker-toggle matSuffix [for]="shippedDateId"></mat-datepicker-toggle>
+            <mat-datepicker #shippedDateId></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+
+          <mat-label class="f-w-600 m-b-8 d-block">Street</mat-label> <mat-form-field appearance="outline" class="w-100"
+            color="primary">
+            <input matInput placeholder="Address" id="addressId" type="text" formControlName="street" />
+            <mat-error class="help-block" *ngIf="displayMessage.street">
+
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-label class="f-w-600 m-b-8 d-block">City</mat-label> <mat-form-field appearance="outline" class="w-100"
+            color="primary">
+            <input matInput placeholder="City" id="cityId" type="text" formControlName="city" />
+            <mat-error class="help-block" *ngIf="displayMessage.city">
+
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-label class="f-w-600 m-b-8 d-block">Country</mat-label> <mat-form-field appearance="outline"
+            class="w-100" color="primary">
+            <input matInput placeholder="Country" id="countryId" type="text" formControlName="country" />
+            <mat-error class="help-block" *ngIf="displayMessage.country">
+
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col-lg-6">
+          <mat-label class="f-w-600 m-b-8 d-block">Zipcode</mat-label> <mat-form-field appearance="outline"
+            class="w-100" color="primary">
+            <input matInput placeholder="Zipcode" id="zipcodeId" type="text" formControlName="zipcode" />
+            <mat-error class="help-block" *ngIf="displayMessage.zipcode">
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <!-- </mat-grid-list> -->
       </div>
+      <!-- </div> -->
 
       <!-- product list -->
 
-      <!-- <mat-list *ngIf="order!=null && order.products!=null">
-        <h3 mat-subheader>Products</h3>
-        <mat-list-item style="background-color:#e7ecf7; padding-bottom:2px; margin-bottom:5px;"
-          *ngFor="let product of order.products">
-          <mat-icon mat-list-icon>folder</mat-icon>
-          <h4 mat-line>{{product.name}} </h4>
-          <button mat-mini-fab style="background-color:lightgrey;float:right;" (click)="openDialog(product)">
-            <mat-icon>delete</mat-icon>
-          </button>
-          <p mat-line> AUD ${{product.price | number: '0.00' }} </p>
+      <h3 mat-subheader>Items</h3>
+      <!-- @for( product  of lineItems; track product.id){
+        {{product.name}}
+      } -->
+      <mat-list *ngIf="lineItems!=null" role="list">
+
+        <mat-list-item role="listitem" class="m-b-10" style="vertical-align:bottom;" *ngFor="let product  of lineItems">
+          <span style="vertical-align: bottom;display: inline-flex; letter-spacing: ">
+            <mat-icon class="m-t-0 m-r-8" mat-list-icon>circle</mat-icon>
+
+            Name: {{product.name}} , Unit Price: {{product.price | currency}} </span>
         </mat-list-item>
-      </mat-list> -->
+      </mat-list>
       <div class='has-error' *ngIf='errorMessage'>{{errorMessage}}</div>
       <div class="m-t-12 button-float-right">
         <button mat-flat-button extended color="secondary" class="m-r-8" type="submit"
           [disabled]='!orderForm.valid'><mat-icon fontIcon="save"></mat-icon>Submit</button>
-        <button mat-stroked-button extended color="warn" [routerLink]="['/customer']">
+        <button mat-stroked-button extended color="warn" [routerLink]="['/order']">
           <mat-icon fontIcon="cancel"></mat-icon>Cancel</button>
       </div>
-  
-  </form>
-    </mat-card-content>
-    <!-- </div> -->
+
+    </form>
+  </mat-card-content>
+  <!-- </div> -->
 
 </mat-card>
